:zap:减少 css 体积:bug:恢复 wrap 方法

--- a/css/pure.css
+++ b/css/pure.css
@@ -437,7 +437,6 @@ html {
 
 .m-button:focus,
 .m-button:hover {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(40%, rgba(0, 0, 0, .05)), to(rgba(0, 0, 0, .1)));
   background-image: linear-gradient(transparent, rgba(0, 0, 0, .05) 40%, rgba(0, 0, 0, .1))
 }
 
@@ -446,7 +445,6 @@ html {
 }
 
 .m-button:active {
-  -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, .15) inset, 0 0 6px rgba(0, 0, 0, .2) inset;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, .15) inset, 0 0 6px rgba(0, 0, 0, .2) inset;
   border-color: #000
 }
